test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/compound_mod_2.plx
#  Can't apply %= to a double
pub fn main(none) i32 {
    i: i32 = 5
    i %= 1.0
    return i
}
